# sudoku-simulated-annealing

./: pyproject.toml  readme.md
src/sudoku_annealing/: data.py  plot.py  run.py  simulated_annealing.py  sudoku.py
tests/: test_data.py  test_sudoku.py
videos/: reheat.webm.mov  solver.webm.mov
