[tool.poetry]
name = "sudoku-annealing"
version = "0.1.0"
description = "Solve Sudoku with simulated annealing"
authors = ["Manuel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
